fix: text color and alignment

--- a/templates/g5_helium/custom/scss/form.css
+++ b/templates/g5_helium/custom/scss/form.css
@@ -6,7 +6,7 @@
       @apply em-default-title-1;
     }
     .em-form-intro {
-      p {
+      * {
         color: var(--neutral-600);
       }
     }
